--- a/GestureLens/GestureLens/GestureLens.vcxproj.filters
+++ b/GestureLens/GestureLens/GestureLens.vcxproj.filters
@@ -21,12 +21,6 @@
     <ClCompile Include="GestureLens.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LetterPoseSampleEngine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Hand.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GestureUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -35,16 +29,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LetterPoseSampleEngine.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PoseStructs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Gesture.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Hand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GestureType.h">
@@ -63,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LetterList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HistoryManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
